# pfc-jan-bramigk

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .latex.yml  .travis.yml  CMakeLists.txt  Makefile  README.md  apresentacao.tex  ime-abntex2.cls  referencias.bib  relatorio.tex  resumo.txt  v0.txt
.cmake/modules/: FindPango.cmake  FindReadline.cmake
doc/: _consideracoes.tex  _licoes_aprendidas.tex  _minimax.tex  _programa.tex  anexos.tex  apendices.tex  arch_ssl.tex  arch_sys.tex  arquitetura.tex  conclusao.tex  cons_finais.tex  cronograma.tex  dec_table.tex  definicoes.tex  discretizacao.tex  distr_move.tex  estr_busca.tex  funcao_objetivo.tex  gui.tex  introducao.tex  jogos.tex  licoes_aprendidas.tex  mapeamento.tex  minimax.tex  modelagem.tex  mov_table.tex  posicoes_chave.tex  programa.tex  resultados.tex  resumo.tex  robotica_e_busca.tex  ssl.tex  table.tex  table_config.tex
doc/results/: atack_cost.tex  block_goal.tex  changes_cost.tex  defence_cost.tex  dist_goal_2_penal.tex  dist_goal_penal.tex  dist_max_mv.tex  dist_total_mv.tex  kick_pos_var.tex  min_gap_kick.tex  recever_num.tex  see_enemy_goal.tex
docs/: conf.py
img/: arq_geral_prog.eps  arq_geral_prog.graphml  arq_ssl.eps  arq_ssl.graphml  communication.eps  distr_mov.eps  distr_mov.graphml  ex_tatica.eps  ex_tatica.graphml  gui.eps  minimax-tree.ps  minimax_flow.eps  minimax_flow.graphml  tab_dec.eps  tab_dec.graphml  threads.eps
proto/: discrete.proto  update.proto
prototypes/minimax/: .gitignore  CMakeLists.txt  Makefile  README  action.h  ball.h  base.h  board.cpp  board.h  body.h  format.sh  graphical_classes.h  kick.h  minimax.cpp  minimax.h  move.h  my_opengl.h  opengl.cpp  pass.h  robot.h  team.h
prototypes/minimax/docs/: conf.py  index.rst
prototypes/minimax/inc/: .body.h.swp  action.h  adaptative_control.h  app.h  base.h  body.h  draw.h  minimax.h  timer.h
prototypes/minimax/src/: action.cpp  adaptative_control.cpp  app.cpp  board.cpp  consts.cpp  draw.cpp  glfw_main.cpp  glut_main.cpp  kick.cpp  main.cpp  minimax.cpp  opengl.cpp  run.cpp
prototypes/minimax/tests/: main.cpp
prototypes/ssl_protocol/: .gitignore  Makefile  add_robot.cc  blue_team  command_parser.cpp  commands.txt  discrete.proto  hwserver.cc  list_team.cc  list_team_server.cpp  lista_nomes  minimax.cpp  team.proto  team_pb2.py  update.proto
src/: action.cpp  action.h  app.cpp  app.h  array.h  colors.h  consts.cpp  consts.h  decision.cpp  decision.h  decision_source.h  decision_table.h  draw.cpp  draw.h  f.m  filter.cpp  filter.h  format.sh  grad_f.m  grad_min.m  gradient.h  gui.cpp  gui.h  hessian.m  id_table.h  lapacke.h  lapacke_config.h  lapacke_mangling.h  main.cpp  minimax.h  newton_grad.m  newton_min.m  numerical_methods.h  optimization.cpp  optimization.h  player.h  segment.h  state.cpp  state.h  suggestion_table.cpp  (+7 more)
tests/: Makefile  main.cpp
